--- a/examples/sample_arbitcycle.cfg
+++ b/examples/sample_arbitcycle.cfg
@@ -5,11 +5,13 @@ HOLD_ASSET_CODE="XLM"
 
 # whether to use the account's entire available hold asset balance in the payment cycles
 # if the hold asset is XLM the bot will reserve enough to keep the account valid
-# to use a specified amount in the payment cycles set this to false and at STATIC_AMOUNT to a non-zero value
+# to use a specified amount in the payment cycles set this to false, uncomment STATIC_AMOUNT, and set it to a non-zero value
 # if USE_BALANCE is set to true the STATIC_AMOUNT value will be ignored
 USE_BALANCE = true
-# quantity of the hold asset to use in the payment cycles
-STATIC_AMOUNT = 0.0
+# quantity of the hold asset to use in the payment cycles, if not using balance
+# STATIC_AMOUNT = 0.0
+# at very low amounts a cycle can result in a loss due to fees, so we set a minimum amount to cycle
+MIN_AMOUNT = 1.0
 
 # the minimum profit ratio for the bot to submit a payment cycle
 # stated as a decimal > 1.0. 1.0 would mean the bot accepts breaking even, less than 1.0 would be a loss
@@ -20,12 +22,12 @@ MIN_RATIO=1.0001
 # the GROUP property allows splitting path construction; it accepts any integer so you can have as many groups as you want
 # if you know two assets have never traded against each other put them in different groups, otherwise you'll be checking lots of junk paths
 [[ASSETS]]
-CODE=COUPON # the code of the cycle asset
-ISSUER =GSIGH...   # the issuer of the asset. if the asset is XLM leave set this to ""
+CODE = COUPON # the code of the cycle asset
+ISSUER = GSIGH...   # the issuer of the asset. if the asset is XLM leave set this to ""
 GROUP = 1
 
 [[ASSETS]]
-CODE=OTHTOKEN # the code of the cycle asset
+CODE=OTHTOKEN 
 ISSUER =GKISH... 
 GROUP = 1
 
