enable using more than one hold asset

--- a/examples/sample_arbitcycle.cfg
+++ b/examples/sample_arbitcycle.cfg
@@ -1,3 +1,8 @@
+# the asset sets are split into groups, which allows the use of multiple hold assets, and limits checking of useless pairs
+# you can have an asset in more than one group, e.g. if you want XLM as the hold for two different sets of assets. 
+# if you have groups with more than one repeated asset you'll end up with duplicates
+# each group starts with a [[GROUPS]] take to mark the group split points
+[[GROUPS]]
 # the hold asset and issuer, this is the asset where your arbitrage cycle starts and ends
 HOLD_ASSET_CODE="XLM"
 # uncomment the HOLD_ASSET_ISSUER if your hold asset is not XLM
@@ -19,16 +24,17 @@ MIN_RATIO=1.0001
 
 # the list of candidate assets through which to cycle
 # you must have at least two. If you list more than two all combinations will be checked each cycle
-# the GROUP property allows splitting path construction; it accepts any integer so you can have as many groups as you want
-# if you know two assets have never traded against each other put them in different groups, otherwise you'll be checking lots of junk paths
-[[ASSETS]]
+[[GROUPS.ASSETS]]
 CODE = "COUPON" # the code of the cycle asset
 ISSUER = "GSIGH..."   # the issuer of the asset. if the asset is XLM leave set this to ""
 GROUP = 1
 
-[[ASSETS]]
+[[GROUPS.ASSETS]]
 CODE= "OTHTOKEN"
 ISSUER = "GKISH..."
 GROUP = 1
 
-# [[ASSETS]]...
+# [[GROUPS.ASSETS]]...
+
+# [[GROUPS]]
+# HOLD_ASSET_CODE="OTH"...
