improve multi-asset; at rate limiter

--- a/examples/sample_arbitconfig.cfg
+++ b/examples/sample_arbitconfig.cfg
@@ -7,3 +7,7 @@ SOURCE_SECRET_SEED="SDDAHRX2JB663N3OLKZIBZPF33ZEKMHARX362S737JEJS2AX3GJZY5LU"
 
 # the url for your horizon instance. If this url contains the string "test" then the bot assumes it is using the test network.
 HORIZON_URL="https://horizon-testnet.stellar.org"
+
+# an optional delay between multi-threaded API calls, in milliseconds; if you are checking a lot of paths Rockfish can submit enough Horizon calls to hit the rate limit
+# integer values
+RATE_LIMITER_MS=0
